title page modified

--- a/QuantEst/thesis/FrontBackMatter/Titlepage.tex
+++ b/QuantEst/thesis/FrontBackMatter/Titlepage.tex
@@ -17,13 +17,14 @@
 
 \vfill
 
-\includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \medskip % Picture
+\includegraphics[width=6cm]{Figures/ANU_Logo} \\ \bigskip % Picture
 
-A study on something I don't quite understand yet \\ \medskip % Thesis subtitle
-%\myDegree \\
-%\myDepartment \\
+A study on something I don't quite understand yet \\ \bigskip \bigskip % Thesis subtitle
+\myDegree \\
+\myDepartment \\
 %\myFaculty \\
-%\myUni \\ \bigskip
+\myUni \\ 
+\bigskip \bigskip
 
 February 2020 -- \myVersion % Time and version
 
