--- a/QuantEst/thesis/classicthesis-config.tex
+++ b/QuantEst/thesis/classicthesis-config.tex
@@ -37,16 +37,16 @@
 
 \newcommand{\myTitle}{A Classic Thesis Style\xspace}
 \newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
-\newcommand{\myDegree}{Doktor-Ingenieur (Dr.-Ing.)\xspace}
-\newcommand{\myName}{André Miede\xspace}
-\newcommand{\myProf}{Put name here\xspace}
+\newcommand{\myDegree}{Bachelor of Information Technology (Honours)\xspace}
+\newcommand{\myName}{Yiping Su\xspace}
+\newcommand{\myProf}{dfafa \xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
-\newcommand{\mySupervisor}{Put name here\xspace}
+\newcommand{\mySupervisor}{Cheng Soon Ong\xspace}
 \newcommand{\myFaculty}{Put data here\xspace}
-\newcommand{\myDepartment}{Put data here\xspace}
-\newcommand{\myUni}{Put data here\xspace}
-\newcommand{\myLocation}{Saarbrücken\xspace}
-\newcommand{\myTime}{September 2015\xspace}
+\newcommand{\myDepartment}{College of Engineering and Computer Science\xspace}
+\newcommand{\myUni}{Australian National University\xspace}
+\newcommand{\myLocation}{Canberra\xspace}
+\newcommand{\myTime}{February 2020\xspace}
 \newcommand{\myVersion}{version 0.2\xspace}
 
 %----------------------------------------------------------------------------------------
