--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -85,42 +85,38 @@
 \pagenumbering{arabic} % Arabic page numbering for thesis content (1, 2, 3, etc)
 %\setcounter{page}{90} % Uncomment to manually start the page counter at an arbitrary value (for example if you wish to count the pre-content pages in the page count)
 
-\cleardoublepage % Avoids problems with pdfbookmark
+% \cleardoublepage % Avoids problems with pdfbookmark
+
+
+
+% \ctparttext{You can put some informational part preamble text here. Illo principalmente su nos. Non message \emph{occidental} angloromanic da. Debitas effortio simplificate sia se, auxiliar summarios da que, se avantiate publicationes via. Pan in terra summarios, capital interlingua se que. Al via multo esser specimen, campo responder que da. Le usate medical addresses pro, europa origine sanctificate nos se.} % Text on the Part 1 page describing  the content in Part 1
+
+% \part{Some Kind of Manual} % First part of the thesis
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
-\ctparttext{You can put some informational part preamble text here. Illo principalmente su nos. Non message \emph{occidental} angloromanic da. Debitas effortio simplificate sia se, auxiliar summarios da que, se avantiate publicationes via. Pan in terra summarios, capital interlingua se que. Al via multo esser specimen, campo responder que da. Le usate medical addresses pro, europa origine sanctificate nos se.} % Text on the Part 1 page describing  the content in Part 1
-
-% \part{Some Kind of Manual} % First part of the thesis
-
 \include{Chapters/literature_review} % Chapter 1
-\include{Chapters/SGD}
-\include{Chapters/algorithm_equivalence}
-\include{Chapters/Simultaneous_SGD}
-\include{Chapters/sgd_experiment}
+% \include{Chapters/SGD}
+% \include{Chapters/algorithm_equivalence}
+% \include{Chapters/Simultaneous_SGD}
+% \include{Chapters/sgd_experiment}
 
 \cleardoublepage % Empty page before the start of the next part
 
 %------------------------------------------------
+% part 2
 
-\ctparttext{You can put some informational part preamble text here. Illo principalmente su nos. Non message \emph{occidental} angloromanic da. Debitas effortio simplificate sia se, auxiliar summarios da que, se avantiate publicationes via. Pan in terra summarios, capital interlingua se que. Al via multo esser specimen, campo responder que da. Le usate medical addresses pro, europa origine sanctificate nos se.} % Text on the Part 2 page describing the content in Part 2
+% \ctparttext{You can put some informational part preamble text here. Illo principalmente su nos. Non message \emph{occidental} angloromanic da. Debitas effortio simplificate sia se, auxiliar summarios da que, se avantiate publicationes via. Pan in terra summarios, capital interlingua se que. Al via multo esser specimen, campo responder que da. Le usate medical addresses pro, europa origine sanctificate nos se.} % Text on the Part 2 page describing the content in Part 2
 
-% \part{The Showcase} % Second part of the thesis
-
-% \include{Chapters/Chapter02} % Chapter 2
-% \include{Chapters/Chapter03} % Chapter 3
-%\include{Chapters/Chapter04} % Chapter 4 - empty template
-
-\cleardoublepage % Empty page before the start of the next part
+% \cleardoublepage % Empty page before the start of the next part
+% \appendix
+% \part{Appendix} % New part of the thesis for the appendix
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
 %----------------------------------------------------------------------------------------
-
-% \appendix
-% \part{Appendix} % New part of the thesis for the appendix
 
 % \include{Chapters/Chapter0A} % Appendix A
 %\include{Chapters/Chapter0B} % Appendix B - empty template
