add .md file again, literature_review sec1.1 modified (description on data stream)

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -506,6 +506,16 @@
   number = {4}
 }
 
+@misc{WhatStreamingData,
+  title = {What Is {{Streaming Data}}? \textendash{} {{Amazon Web Services}} ({{AWS}})},
+  shorttitle = {What Is {{Streaming Data}}?},
+  abstract = {Learn about what Streaming Data is and see a simple comparison chart that shows you the main differences between stream processing and batch processing in big data workloads.},
+  file = {/Users/sue/Zotero/storage/KWRFH7PK/streaming-data.html},
+  howpublished = {https://aws.amazon.com/streaming-data/},
+  journal = {Amazon Web Services, Inc.},
+  language = {en-US}
+}
+
 @article{yangRSGBeatingSubgradient,
   title = {{{RSG}}: {{Beating Subgradient Method}} without {{Smoothness}} and {{Strong Convexity}}},
   author = {Yang, Tianbao and Lin, Qihang},
