--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -62,7 +62,7 @@
 %	PRE-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
 
-\include{FrontBackMatter/Titlepage} % Main title page
+% \include{FrontBackMatter/Titlepage} % Main title page
 
 % \include{FrontBackMatter/Titleback} % Back of the title page
 
@@ -78,9 +78,9 @@
 
 \pagestyle{scrheadings} % Show chapter titles as headings
 
-\cleardoublepage\include{FrontBackMatter/Contents} % Contents, list of figures/tables/listings and acronyms
+% \cleardoublepage\include{FrontBackMatter/Contents} % Contents, list of figures/tables/listings and acronyms
 
-\cleardoublepage
+% \cleardoublepage
 
 \pagenumbering{arabic} % Arabic page numbering for thesis content (1, 2, 3, etc)
 %\setcounter{page}{90} % Uncomment to manually start the page counter at an arbitrary value (for example if you wish to count the pre-content pages in the page count)
