Literature review update: sec 1.1.1 deterministic algo done

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -1,4 +1,12 @@
 
+@article{agarwalMergeableSummaries,
+  title = {Mergeable Summaries},
+  author = {Agarwal, Pankaj K and Cormode, Graham and Huang, Zengfeng and Phillips, Jeff and Wei, Zhewei and Yi, Ke},
+  pages = {12},
+  file = {/Users/sue/Zotero/storage/RW642I4K/Agarwal et al. - Mergeable summaries.pdf},
+  language = {en}
+}
+
 @article{arandjelovicTwoMaximumEntropy2014,
   title = {Two Maximum Entropy Based Algorithms for Running Quantile Estimation in Non-Stationary Data Streams},
   author = {Arandjelovic, Ognjen and Pham, Duc-Son and Venkatesh, Svetha},
@@ -128,6 +136,21 @@
   journal = {arXiv:1503.01156 [cs]},
   keywords = {Computer Science - Data Structures and Algorithms},
   primaryClass = {cs}
+}
+
+@article{felberRandomizedOnlineQuantile2017,
+  title = {A Randomized Online Quantile Summary in {{O}}((1/Epsilon)Log(1/Epsilon)) Words},
+  author = {Felber, David and Ostrovsky, Rafail},
+  year = {2017},
+  volume = {13},
+  pages = {1--17},
+  issn = {1557-2862},
+  doi = {10.4086/toc.2017.v013a014},
+  abstract = {A quantile summary is a data structure that approximates to {$\epsilon$} error the order statistics of a much larger underlying dataset. In this paper we develop a randomized online quantile summary for the cash register data input model and comparison data domain model that uses O((1/{$\epsilon$}) log(1/{$\epsilon$})) words of memory. This improves upon the previous best upper bound of O((1/{$\epsilon$}) log3/2(1/{$\epsilon$})) by Agarwal et al. (PODS 2012). Further, by a lower bound of Hung and Ting (FAW 2010) no deterministic summary for the comparison model can outperform our randomized summary in terms of space complexity. Lastly, our summary has the nice property that O((1/{$\epsilon$}) log(1/{$\epsilon$})) words suffice to ensure that the success probability is at least 1 - exp(-poly(1/{$\epsilon$})).},
+  file = {/Users/sue/Zotero/storage/E2PYZDW4/Felber and Ostrovsky - 2017 - [No title found].pdf},
+  journal = {Theory of Computing},
+  language = {en},
+  number = {1}
 }
 
 @article{freundDecisionTheoreticGeneralizationOnLine1997,
@@ -350,6 +373,22 @@
   journal = {Statistics and Computing},
   language = {en},
   number = {4}
+}
+
+@article{munroSelectionSortingLimited1980,
+  title = {Selection and Sorting with Limited Storage},
+  author = {Munro, J. I. and Paterson, M. S.},
+  year = {1980},
+  month = nov,
+  volume = {12},
+  pages = {315--323},
+  issn = {0304-3975},
+  doi = {10.1016/0304-3975(80)90061-4},
+  abstract = {When selecting from, or sorting, a file stored on a read-only tape and the internal storage is rather limited, several passes of the input tape may be required. We study the relation between the amount of internal storage available and the number of passes required to select the Kth highest of N inputs. We show, for example, that to find the median in two passes requires at least {$\omega$}(N12) and at most O(N12log N) internal storage. For probabilistic methods, \texttheta{}(N12) internal storage is necessary and sufficient for a single pass method which finds the median with arbitrarily high probability.},
+  file = {/Users/sue/Zotero/storage/ANEGN3DC/Munro and Paterson - 1980 - Selection and sorting with limited storage.pdf;/Users/sue/Zotero/storage/BSILCJ3P/0304397580900614.html},
+  journal = {Theoretical Computer Science},
+  language = {en},
+  number = {3}
 }
 
 @article{muthukrishnanDataStreamsAlgorithms2005,
