--- a/UCB/M_UCB/notebooks/M_UCB_Simulations-ICML.ipynb
+++ b/UCB/M_UCB/notebooks/M_UCB_Simulations-ICML.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "## Simulations\n",
     "\n",
-    "We compare our policy (\\ourpolicy) with four others: 1) U-UCB \\cite{cassel_general_2018} with empirical performance distribution measure as VaR, 2) $\\epsilon$-greedy algorithm, which chooses a random arm with probability $\\epsilon = 0.1$,  and otherwise the arm with highest empirical median, 3) robust UCB-median of mean \\cite{bubeck2013bandits}, which allows heavy-tailed reward distributions. 4) adversarial bandit algorithm Exp3 \\cite{Auer2003adv} which assumes the reward distributions are adversarial.\n",
+    "We compare our policy M-UCB with four others: 1) U-UCB with empirical performance distribution measure as VaR, 2) $\\epsilon$-greedy algorithm, which chooses a random arm with probability $\\epsilon = 0.1$,  and otherwise the arm with highest empirical median, 3) robust UCB-median of mean, which allows heavy-tailed reward distributions. 4) adversarial bandit algorithm Exp3 which assumes the reward distributions are adversarial.\n",
     "The performance of the algorithms are evaluated in terms of the expected sub-optimal draws. Note the plots are shown in log scale on the vertical axis.\n",
     "\n",
     "Note that the robust UCB-median of means and Exp3 algorithms pick the arm with highest mean as the optimal arm, we thus evaluate these two algorithms with the optimal arm defined as the one with highest mean, as they will be disadvantaged if we choose the optimal arm with the maximum median.\n",
@@ -67,7 +67,7 @@
     "heavy-tailed distributions and adversarial problems respectively.\n",
     "All other algorithms use median as summary statistics and evaluated with the optimal arm defined as the one with the highest median.\n",
     "\n",
-    "For simulations, we design reward distributions using the special case distributions we listed in Section \\ref{app-sec: special case}. The reward distribution for 3 arms are: A) $|\\mathcal{N}(1.2, 4)|$ B) $|\\mathcal{N}(3,1)|$  C) Exp(3.5). We simulate 50 independent experiments, where each experiment runs 10,000 rounds."
+    "For simulations, we design reward distributions using the special case distributions of IHR (non-decreasing hazard rate distributions). The reward distribution for 3 arms are: A) $|\\mathcal{N}(1.2, 4)|$ B) $|\\mathcal{N}(3,1)|$  C) Exp(3.5). We simulate 50 independent experiments, where each experiment runs 10,000 rounds."
    ]
   },
   {
